--- a/stylesh.css
+++ b/stylesh.css
@@ -1,5 +1,7 @@
 body {
   font-family: 'Arial', sans-serif;
+  background-color: #121212; /* Dark background color */
+  color: #ffffff;
 }
 
 .container {
@@ -21,6 +23,8 @@ body {
 .navbar-dark .navbar-nav .nav-link:hover {
   color: #dddddd;
 }
+
+
 
 /* Responsive styles */
 @media (max-width: 767px) {
