updated button accessability

--- a/stylesh.css
+++ b/stylesh.css
@@ -24,7 +24,17 @@ body {
   color: #dddddd;
 }
 
+.btn {
+  background-color: #007bff; /* Blue color for buttons */
+  border-color: #007bff; /* Blue border color */
+  color: #ffffff; /* Light text color */
+}
 
+.btn:hover {
+  background-color: #0056b3; /* Darker blue color on hover */
+  border-color: #0056b3; /* Darker blue border color on hover */
+  color: #ffffff; /* Light text color */
+}
 
 /* Responsive styles */
 @media (max-width: 767px) {
