--- a/stylesh.css
+++ b/stylesh.css
@@ -1,7 +1,7 @@
 body {
   font-family: 'Arial', sans-serif;
-  background-color: #121212; /* Dark background color */
-  color: #ffffff;
+  background-color: #1a1a1a; /* Darker background color */
+  color: #ffffff; /* Light text color */
 }
 
 .container {
