--- a/stylesh.css
+++ b/stylesh.css
@@ -69,3 +69,12 @@ body {
   height: 100%;
   border: 0;
 }
+
+
+#container3D canvas {
+  width: 100vw !important;
+  height: 100vh !important;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
