--- a/stylesh.css
+++ b/stylesh.css
@@ -74,7 +74,7 @@ body {
 #container3D canvas {
   width: 100vw !important;
   height: 100vh !important;
-  position: absolute;
+  position: relative;
   top: 0;
   left: 0;
 }
